--- a/config.php.example
+++ b/config.php.example
@@ -6,16 +6,12 @@ define('CONFIG_DEBUG', false);
 define('CONFIG_SESSION_DIR', '/tmp/openslx');
 define('CONFIG_SESSION_TIMEOUT', 86400 * 3);
 
-//define('CONFIG_SQL_BACKEND', 'mysql');
-//define('CONFIG_SQL_HOST', 'localhost');
+// Put your mysql credentials here
 define('CONFIG_SQL_DSN', 'mysql:dbname=openslx;host=localhost');
 define('CONFIG_SQL_USER', 'openslx');
-// This marker %MYSQL_OPENSLX_PASS% is meant for automated patching
-// via SSPS (satellite server preparation script) - do not change it
-// if you plan to run this script afterwards.
 define('CONFIG_SQL_PASS', '%MYSQL_OPENSLX_PASS%');
+// Set this to true if you mysql server doesn't default to UTF-8 on new connections
 define('CONFIG_SQL_FORCE_UTF8', false);
-//define('CONFIG_SQL_DB', 'openslx');
 
 define('CONFIG_TGZ_LIST_DIR', '/opt/openslx/configs');
 
