--- a/config.php.example
+++ b/config.php.example
@@ -27,7 +27,7 @@ define('CONFIG_VMSTORE_DIR', '/srv/openslx/nfs');
 define('CONFIG_PROXY_CONF', '/opt/openslx/proxy/config');
 
 // Sort order for menu - optional, if missing, order will be alphabetically
-$MENU_CAT_SORT_ORDER = array('main.content' => 0, 'main.settings' => 1, 'main.status' => 2, 'main.users' => 3);
+$MENU_CAT_SORT_ORDER = array('main.content' => 0, 'main.settings-client' => 1, 'main.settings-server' => 2, 'main.status' => 3, 'main.users' => 4);
 $MENU_SETTING_SORT_ORDER = array(
 	'news' => 0, 'sysconfig' => 1, 'baseconfig' => 2, 'locations' => 3, // main.content
 	'serversetup' => 0, 'internetaccess' => 1, 'vmstore' => 2, 'webinterface' => 3, 'backup' => 4, // main.settings
