--- a/config.php.example
+++ b/config.php.example
@@ -26,6 +26,9 @@ define('CONFIG_VMSTORE_DIR', '/srv/openslx/nfs');
 
 define('CONFIG_PROXY_CONF', '/opt/openslx/proxy/config');
 
+/* for the dozmod API proxy cache */ 
+define('CONFIG_DOZMOD_EXPIRE', 60*60); // 1 Minute
+
 // Sort order for menu - optional, if missing, order will be alphabetically
 $MENU_CAT_SORT_ORDER = array('main.content' => 0, 'main.settings-client' => 1, 'main.settings-server' => 2, 'main.status' => 3, 'main.users' => 4);
 $MENU_SETTING_SORT_ORDER = array(
