--- a/modules-available/exams/config.json
+++ b/modules-available/exams/config.json
@@ -1,5 +1,5 @@
 {
 	"category":"main.status",
-	"dependencies": [ "locations" ],
+	"dependencies": [ "locations", "visjs", "bootstrap_datepicker", "bootstrap_timepicker"],
 	"permission": "0"
 }
