[exams] Move to content group; fix timepicker; mark old exams

--- a/modules-available/exams/config.json
+++ b/modules-available/exams/config.json
@@ -1,5 +1,5 @@
 {
-	"category":"main.status",
+	"category":"main.content",
 	"dependencies": [ "locations", "visjs", "bootstrap_datepicker", "bootstrap_timepicker", "bootstrap_multiselect"],
 	"permission": "0"
 }
