use bootstrap-multiselect for multilist and selectize for multiinput.

--- a/modules-available/baseconfig/config.json
+++ b/modules-available/baseconfig/config.json
@@ -1,3 +1,4 @@
 {
-	"category": "main.settings-client"
+	"category": "main.settings-client",
+	"dependencies" : ["js_selectize", "bootstrap_multiselect"]
 }
