[permission-manager] added role editor (new role and edit role)

--- a/modules-available/permissionmanager/config.json
+++ b/modules-available/permissionmanager/config.json
@@ -1,4 +1,4 @@
 {
 	"category":"main.content",
-	"dependencies": [ "js_stupidtable"]
+	"dependencies": [ "js_stupidtable", "bootstrap_switch", "js_selectize" ]
 }
