[baseconfig_bwlp] Add SLX_AUTOSTART_UUID setting
This completely implements #3070

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -132,5 +132,11 @@
 		"defaultvalue": "",
 		"permissions": "2",
 		"validator": ""
+	},
+	"SLX_AUTOSTART_UUID": {
+		"catid": "vmchooser",
+		"defaultvalue": "",
+		"permissions": "2",
+		"validator": "regex:\/^([0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}|)$\/i"
 	}
 }
