[baseconfig_bwlp] Add setting for default pvs checkbox state in vmChooser
This implements #3105 (Support in vmChooser/MiniLinux still missing though)

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -138,5 +138,11 @@
 		"defaultvalue": "",
 		"permissions": "2",
 		"validator": "regex:\/^([0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}|)$\/i"
+	},
+	"SLX_PVS_DEFAULT": {
+		"catid": "vmchooser",
+		"defaultvalue": "OFF",
+		"permissions": "2",
+		"validator": "list:ON|OFF"
 	}
 }
