Move rebootcontrol, locationinfo to new beta section, statistics_reporting to status
Closes #3122

--- a/modules-available/statistics_reporting/config.json
+++ b/modules-available/statistics_reporting/config.json
@@ -1,4 +1,4 @@
 {
-	"category": "main.content",
+	"category": "main.status",
 	"dependencies": [ "statistics", "locations", "js_stupidtable", "js_jqueryui" ]
 }
