--- a/config.php.example
+++ b/config.php.example
@@ -15,7 +15,7 @@ define('CONFIG_SQL_FORCE_UTF8', true);
 
 define('CONFIG_TGZ_LIST_DIR', '/opt/openslx/configs');
 
-define('CONFIG_REMOTE_ML',  'https://bwlp-masterserver.ruf.uni-freiburg.de/minilinux/sat_02');
+define('CONFIG_REMOTE_ML',  'https://bwlp-masterserver.ruf.uni-freiburg.de/minilinux/sat_03');
 
 define('CONFIG_TFTP_DIR', '/srv/openslx/tftp');
 define('CONFIG_HTTP_DIR', '/srv/openslx/www/boot');
@@ -40,13 +40,16 @@ $MENU_CAT_OVERRIDE = array(
 	'main.content' => array(
 		'news', 'locations', 'exams', 'dozmod', 'translation'
 	),
-	'main.settings-server' => array(
-		'serversetup', 'vmstore', 'webinterface', 'backup'
-	),
 	'main.settings-client' => array(
 		'sysconfig', 'baseconfig', 'minilinux'
 	),
+	'main.settings-server' => array(
+		'serversetup', 'vmstore', 'webinterface', 'backup'
+	),
 	'main.status' => array(
-		'systemstatus', 'eventlog', 'syslog', 'statistics'
+		'systemstatus', 'eventlog', 'syslog', 'statistics', 'statistics_reporting'
+	),
+	'main.beta' => array(
+		'locationinfo', 'rebootcontrol'
 	)
 );
