--- a/modules-available/js_vis/config.json
+++ b/modules-available/js_vis/config.json
@@ -1,3 +1,9 @@
 {
-	"dependencies" : ["js_moment"]
+	"dependencies" : ["js_moment"],
+	"css": {
+		"style.css": true
+	},
+	"scripts": {
+		"clientscript.js": true
+	}
 }
