--- a/modules-available/js_moment/config.json
+++ b/modules-available/js_moment/config.json
@@ -1,3 +1,9 @@
 {
-	"dependencies" : []
+	"dependencies" : [],
+	"css": {
+		"style.css": true
+	},
+	"scripts": {
+		"clientscript.js": true
+	}
 }
