[runmode] Tweaks, support NO_CONFIG and systemd target

--- a/modules-available/locationinfo/hooks/runmode/config.json
+++ b/modules-available/locationinfo/hooks/runmode/config.json
@@ -1,4 +1,7 @@
 {
 	"getModeName": "LocationInfo::getPanelName",
-	"isClient": false
+	"isClient": false,
+	"configHook": "LocationInfo::configHook",
+	"noSysconfig": true,
+	"systemdDefaultTarget": "multi-user"
 }
