[locationinfo] Set proper systemd target

--- a/modules-available/locationinfo/hooks/runmode/config.json
+++ b/modules-available/locationinfo/hooks/runmode/config.json
@@ -3,5 +3,5 @@
 	"isClient": false,
 	"configHook": "LocationInfo::configHook",
 	"noSysconfig": true,
-	"systemdDefaultTarget": "multi-user"
+	"systemdDefaultTarget": "kiosk-mode"
 }
