[baseconfig_bwlp] Add SLX_NET_SEARCH

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -23,6 +23,12 @@
 		"permissions": "2",
 		"validator": ""
 	},
+	"SLX_NET_SEARCH": {
+		"catid": "networking",
+		"defaultvalue": "",
+		"permissions": "2",
+		"validator": ""
+	},
 	"SLX_NTP_SERVER": {
 		"catid": "timesync",
 		"defaultvalue": "0.de.pool.ntp.org 1.de.pool.ntp.org",
