[baseconfig_bwlp] Add SLX_WAKEUP_SCHEDULE

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -127,6 +127,12 @@
 		"permissions": "2",
 		"validator": "regex:\/^\\d*$\/"
 	},
+	"SLX_WAKEUP_SCHEDULE": {
+		"catid": "power",
+		"defaultvalue": "",
+		"permissions": "2",
+		"validator": "regex:\/^(\\s*\\d{1,2}:\\d{1,2})*\\s*$\/"
+	},
 	"SLX_VMCHOOSER_TAB": {
 		"catid": "vmchooser",
 		"defaultvalue": "AUTO",
