--- a/modules-available/roomplanner/config.json
+++ b/modules-available/roomplanner/config.json
@@ -1,3 +1,3 @@
 {
-	"dependencies": ["js_jqueryui", "js_selectize", "bootstrap_dialog", "statistics", "locations"]
+	"dependencies": ["js_jqueryui", "js_selectize", "bootstrap_dialog", "statistics", "locations", "runmode"]
 }
