[runmode] Properly block simple editor if requested; add customized delete URL

--- a/modules-available/roomplanner/hooks/runmode/config.json
+++ b/modules-available/roomplanner/hooks/runmode/config.json
@@ -2,5 +2,6 @@
 	"getModeName": "PvsGenerator::getManagerName",
 	"isClient": false,
 	"configHook": "PvsGenerator::runmodeConfigHook",
-	"allowGenericEditor": false
+	"allowGenericEditor": false,
+	"deleteUrlSnippet": "locationid="
 }
