[baseconfig_bwlp] add SLX_PASSTHROUGH_USB_ID

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -185,5 +185,11 @@
 		"defaultvalue": "OFF",
 		"permissions": "2",
 		"validator": "list:ON|OFF"
+	},
+	"SLX_PASSTHROUGH_USB_ID": {
+		"catid": "vmchooser",
+		"defaultvalue": "",
+		"permissions": "2",
+		"validator": "regex:\/^(([0-9a-f]{4}:[0-9a-f]{4}\\s*)+|)$\/i"
 	}
 }
