[runmode] Fix error message if generic editor is not allowed, allow dnbd3 editor

--- a/modules-available/dnbd3/hooks/runmode/config.json
+++ b/modules-available/dnbd3/hooks/runmode/config.json
@@ -3,6 +3,6 @@
 	"configHook": "Dnbd3Util::runmodeConfigHook",
 	"noSysconfig": true,
 	"systemdDefaultTarget": "dnbd3-proxy",
-	"allowGenericEditor": false,
+	"allowGenericEditor": true,
 	"deleteUrlSnippet": "dummyparam="
 }
