--- a/modules-available/permissionmanager/config.json
+++ b/modules-available/permissionmanager/config.json
@@ -1,4 +1,4 @@
 {
 	"category":"main.content",
-	"dependencies": [ "locations", "js_stupidtable", "bootstrap_switch", "js_selectize" ]
+	"dependencies": [ "locations", "js_stupidtable", "js_selectize" ]
 }
