[dnbd3] Implement permissions

--- a/modules-available/dnbd3/hooks/runmode/config.json
+++ b/modules-available/dnbd3/hooks/runmode/config.json
@@ -4,5 +4,6 @@
 	"noSysconfig": true,
 	"systemdDefaultTarget": "dnbd3-proxy",
 	"allowGenericEditor": true,
-	"deleteUrlSnippet": "dummyparam="
+	"deleteUrlSnippet": "dummyparam=",
+	"permission": ".dnbd3.configure.proxy"
 }
