[roomplanner] Add permissions

--- a/modules-available/roomplanner/hooks/runmode/config.json
+++ b/modules-available/roomplanner/hooks/runmode/config.json
@@ -3,5 +3,6 @@
 	"isClient": false,
 	"configHook": "PvsGenerator::runmodeConfigHook",
 	"allowGenericEditor": false,
-	"deleteUrlSnippet": "locationid="
+	"deleteUrlSnippet": "locationid=",
+	"permission": ".roomplanner.edit"
 }
