[locationinfo] Add permission entry to runmode config

--- a/modules-available/locationinfo/hooks/runmode/config.json
+++ b/modules-available/locationinfo/hooks/runmode/config.json
@@ -3,5 +3,6 @@
 	"isClient": false,
 	"configHook": "LocationInfo::configHook",
 	"noSysconfig": true,
-	"systemdDefaultTarget": "kiosk-mode"
+	"systemdDefaultTarget": "kiosk-mode",
+	"permission": ".locationinfo.panel.assign-client"
 }
