[inc/Module] Overhaul dependency loading and handling of js/css
This is supposed to prevent unneeded js/css from being pulled in

--- a/modules-available/baseconfig/config.json
+++ b/modules-available/baseconfig/config.json
@@ -1,4 +1,7 @@
 {
 	"category": "main.settings-client",
-	"dependencies" : ["js_selectize", "bootstrap_multiselect"]
+	"dependencies": [
+	    "js_selectize",
+	    "bootstrap_multiselect"
+	]
 }
