--- a/modules-available/baseconfig_partitions_cdn/config.json
+++ b/modules-available/baseconfig_partitions_cdn/config.json
@@ -1,4 +1,6 @@
 {
-    "category": "main.settings-client",
-    "dependencies": [ "baseconfig" ]
+	"category": "main.settings-client",
+	"dependencies": [
+	    "baseconfig"
+	]
 }
