--- a/modules-available/dnbd3/config.json
+++ b/modules-available/dnbd3/config.json
@@ -1,4 +1,7 @@
 {
-	"category":"main.settings-server",
-	"dependencies":["locations","runmode"]
+	"category": "main.settings-server",
+	"dependencies": [
+	    "locations",
+	    "runmode"
+	]
 }
