--- a/modules-available/locationinfo/config.json
+++ b/modules-available/locationinfo/config.json
@@ -1,4 +1,9 @@
 {
-	"category":"main.beta",
-	"dependencies": ["js_jqueryui", "bootstrap_timepicker", "locations", "bootstrap_switch"]
+	"category": "main.beta",
+	"dependencies": [
+	    "js_jqueryui",
+	    "bootstrap_timepicker",
+	    "locations",
+	    "bootstrap_switch"
+	]
 }
