--- a/modules-available/statistics_reporting/config.json
+++ b/modules-available/statistics_reporting/config.json
@@ -1,4 +1,9 @@
 {
 	"category": "main.status",
-	"dependencies": [ "statistics", "locations", "js_stupidtable", "js_jqueryui" ]
+	"dependencies": [
+	    "statistics",
+	    "locations",
+	    "js_stupidtable",
+	    "js_jqueryui"
+	]
 }
