--- a/modules-available/syslog/config.json
+++ b/modules-available/syslog/config.json
@@ -1,4 +1,6 @@
 {
-	"category":"main.status",
-	"dependencies":["js_selectize"]
+	"category": "main.status",
+	"dependencies": [
+	    "js_selectize"
+	]
 }
