[serversetup-bwlp] add location selection to menu edit + ui improvements
- add multiselect to select the locations
- add architecture information to the bootentry select modal
- add glyphicon to the hide entry column header
- default menu is now selected in the menu list
- fixed error when creating a menu (isdefault has no default value)
  and when creating a menu without bootentries

--- a/modules-available/serversetup-bwlp/config.json
+++ b/modules-available/serversetup-bwlp/config.json
@@ -2,6 +2,7 @@
 	"category": "main.settings-server",
 	"dependencies" : [
 		"locations",
-		"js_jqueryui"
+		"js_jqueryui",
+		"bootstrap_multiselect"
 	]
 }
