[baseconfig_bwlp] Add SLX_PREFERRED_SOUND_OUTPUT
Refs #3242

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -186,6 +186,12 @@
 			]
 		}
 	},
+	"SLX_PREFERRED_SOUND_OUTPUT": {
+		"catid": "sysconfig",
+		"defaultvalue": "SOUNDCARD",
+		"permissions": "2",
+		"validator": "list:HDMI|SOUNDCARD"
+	},
 	"SLX_PVS_DEFAULT": {
 		"catid": "vmchooser",
 		"defaultvalue": "OFF",
