[baseconfig_bwlp] Add SLX_SCREEN_SAVER(_GRACE)?_TIMEOUT
Control xscreensaver timeout and grace period.

--- a/modules-available/baseconfig_bwlp/baseconfig/settings.json
+++ b/modules-available/baseconfig_bwlp/baseconfig/settings.json
@@ -121,6 +121,18 @@
 		"permissions": "2",
 		"validator": "regex:\/^\\d*$\/"
 	},
+	"SLX_SCREEN_SAVER_TIMEOUT": {
+		"catid": "power",
+		"defaultvalue": "540",
+		"permissions": "2",
+		"validator": "regex:\/^\\d*$\/"
+	},
+	"SLX_SCREEN_SAVER_GRACE_TIMEOUT": {
+		"catid": "power",
+		"defaultvalue": "15",
+		"permissions": "2",
+		"validator": "regex:\/^\\d*$\/"
+	},
 	"SLX_SCREEN_STANDBY_TIMEOUT": {
 		"catid": "power",
 		"defaultvalue": "600",
