--- a/config.php.example
+++ b/config.php.example
@@ -32,6 +32,8 @@ define('CONFIG_DOZMOD_EXPIRE', 60);
 
 define('CONFIG_REPORTING_URL', 'https://bwlp-masterserver.ruf.uni-freiburg.de/rpc/');
 
+define('CONFIG_BIOS_URL', 'https://bwlp-masterserver.ruf.uni-freiburg.de/bios/list.json');
+
 define('CONFIG_PRODUCT_NAME', 'OpenSLX');
 define('CONFIG_PRODUCT_NAME_LONG', 'OpenSLX Admin');
 
