--- a/modules-available/rebootcontrol/config.json
+++ b/modules-available/rebootcontrol/config.json
@@ -1,5 +1,6 @@
 {
-	"category": "main.beta",
+	"category": "main.etc",
+	"collapse": true,
 	"dependencies": [
 	    "locations",
 	    "js_stupidtable"
