[sysconfig/runmode] Remove "noSysconfig" functionality
Was of limited use and not properly implemented anyways.

--- a/modules-available/locationinfo/hooks/runmode/config.json
+++ b/modules-available/locationinfo/hooks/runmode/config.json
@@ -1,8 +1,7 @@
 {
-	"getModeName": "LocationInfo::getPanelName",
+	"getModeName": "LocationInfoHooks::getPanelName",
 	"isClient": false,
-	"configHook": "LocationInfo::configHook",
-	"noSysconfig": true,
+	"configHook": "LocationInfoHooks::configHook",
 	"systemdDefaultTarget": "kiosk-mode",
 	"permission": ".locationinfo.panel.assign-client"
 }
